--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-loader": "^8.0.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
@@ -25,8 +26,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@storybook/react": "^5.0.8",
     "@storybook/addon-actions": "^5.0.8",
-    "@storybook/addon-links": "^5.0.8"
+    "@storybook/addon-links": "^5.0.8",
+    "@storybook/react": "^5.0.8"
   }
 }
